fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 html{
     font-family: 'Quicksand', sans-serif;
+    flex-direction: column;
 }
 
 .links {
@@ -11,27 +12,37 @@ a{
     color: black;
 }
 
-.Tcookies{
-    display: inline;
-    float: left;
-    padding-left: 320px;
-    font-size: 25px
+.main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
-.Toreo{
-    display: inline;
-    padding: 200px;
-    font-size: 25px;
+.card-cookies{
+}
+
+.card-oreos{
 
 }
 
-.Tbaileys{
-    display: inline;
-    float: right;
-    padding-right: 370px;
-    margin-top: -45px;
-    font-size: 25px;
+.card-baileys{
 
+}
+
+.cookies{
+    width: 500px;
+    height: 600px;
+}
+
+.oreo{
+    width: 500px;
+    height: 600px;
+}
+
+.baileys{
+    width: 500px;
+    height: 600px;
 }
 
 .logo {
@@ -42,30 +53,4 @@ a{
     margin-bottom: 20px;
     width: 300px;
     height: 300px;
-}
-
-.cookies{
-    display: inline-block;
-    width: 350px;
-    height: 500px;
-    float: left;
-    padding-left: 300px;
-
-}
-
-.oreo{
-    display: inline-block;
-    width: 350px;
-    height: 500px;
-    padding-left: 120px;
-
-    
-}
-
-.baileys{
-    display: inline-block;
-    width: 350px;
-    height: 500px;
-    float: right;
-    padding-right: 300px;
 }
